--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "autoprefixer": "^10.4.20",
+    "bootstrap": "5.1.3",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "scroll": "^3.0.1",
+    "smooth-scroll": "^16.1.3",
+    "tailwindcss": "^3.4.10",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
