Replaced old site with new site

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/abbas-ali-syed/abbas-ali-syed.github.io",
+  "homepage": "https://abbas-ali-syed.github.io/",
   "name": "portfolio-react",
   "version": "0.1.0",
   "private": true,
